rustbook-ru/listings/ch16-fearless-concurrency/listing-16-09/output.txt
$ cargo run
   Compiling сообщение-passing v0.1.0 (file:///projects/сообщение-passing)
error[E0382]: borrow of moved значение: `val`
  --> src/main.rs:10:26
   |
8  |         let val = String::from("hi");
   |             --- move occurs because `val` has type `String`, which does not implement the `Copy` trait
9  |         tx.send(val).unwrap();
   |                 --- value moved here
10 |         println!("val is {val}");
   |                          ^^^^^ value borrowed here after move
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0382`.
error: could not compile `сообщение-passing` (bin "сообщение-passing") due to 1 previous error
